Fixed checkbox border on IE
--- pt-br ---------------

Consertada borda da checkbox no IE


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@338 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -133,6 +133,10 @@ input.button {
     background-color: #b0ddff;
 }
 
+input.checkbox {
+   border: none;
+}
+
 #editor input.text {
     width: 100%;
 }
